--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "@types/react-router": "5.0.1",
     "@types/react-router-dom": "^5.3.3",
     "acorn": "^8.8.2",
-    "amis-widget-cli": "^3.2.0",
+    "amis-widget-cli": "3.2.0",
     "monaco-editor-webpack-plugin": "6.0.0",
     "prettier": "^2.2.1",
     "sass": "^1.63.4",
