--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "amis 可视化编辑器",
   "main": "index.js",
   "scripts": {
-    "dev": "amis dev",
+    "dev": "vite",
+    "dev-old": "amis dev",
     "build": "amis build",
     "format": "prettier --write \"src/**/**/*.{js,jsx,ts,tsx,vue,scss,json}\""
   },
@@ -24,12 +25,12 @@
   "homepage": "https://github.com/aisuda/amis-editor-demo#readme",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
-    "amis": "6.0.0",
-    "amis-core": "6.0.0",
-    "amis-formula": "6.0.0",
-    "amis-ui": "6.0.0",
-    "amis-editor": "6.0.0",
-    "amis-editor-core": "6.0.0",
+    "amis": "6.3.0",
+    "amis-core": "6.3.0",
+    "amis-editor": "6.3.0",
+    "amis-editor-core": "6.3.0",
+    "amis-formula": "6.3.0",
+    "amis-ui": "6.3.0",
     "axios": "0.21.1",
     "copy-to-clipboard": "^3.2.0",
     "mobx": "4.15.7",
@@ -50,6 +51,10 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router": "5.0.1",
     "@types/react-router-dom": "^5.3.3",
+    "@vitejs/plugin-react": "^2.2.0",
+    "vite": "^4.3.9",
+    "vite-plugin-monaco-editor": "^1.1.0",
+    "vite-plugin-svgr": "^2.2.2",
     "acorn": "^8.8.2",
     "amis-widget-cli": "3.2.0",
     "monaco-editor-webpack-plugin": "6.0.0",
