--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "amis-editor-demo",
+  "name": "amis-editor",
   "version": "1.0.0",
   "description": "amis 可视化编辑器",
   "main": "index.js",
