--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
   "homepage": "https://github.com/aisuda/amis-editor-demo#readme",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
-    "amis": "6.3.0",
-    "amis-core": "6.3.0",
-    "amis-editor": "6.3.0",
-    "amis-editor-core": "6.3.0",
-    "amis-formula": "6.3.0",
-    "amis-ui": "6.3.0",
+    "amis": "6.7.0",
+    "amis-core": "6.7.0",
+    "amis-editor": "6.7.0",
+    "amis-editor-core": "6.7.0",
+    "amis-formula": "6.7.0",
+    "amis-ui": "6.7.0",
     "axios": "0.21.1",
     "be-full": "^0.1.4",
     "copy-to-clipboard": "^3.2.0",
@@ -38,9 +38,9 @@
     "mobx-react": "6.3.1",
     "mobx-state-tree": "3.17.3",
     "qs": "6.5.3",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-hook-form": "^7.39.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "7.39.3",
     "react-router": "5.0.1",
     "react-router-dom": "5.0.1"
   },
