--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
   "homepage": "https://github.com/aisuda/amis-editor-demo#readme",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
-    "amis": "6.7.0",
-    "amis-core": "6.7.0",
-    "amis-editor": "6.7.0",
-    "amis-editor-core": "6.7.0",
-    "amis-formula": "6.7.0",
-    "amis-ui": "6.7.0",
+    "amis": "6.8.0",
+    "amis-core": "6.8.0",
+    "amis-editor": "6.8.0",
+    "amis-editor-core": "6.8.0",
+    "amis-formula": "6.8.0",
+    "amis-ui": "6.8.0",
     "axios": "0.21.1",
     "be-full": "^0.1.4",
     "copy-to-clipboard": "^3.2.0",
@@ -49,7 +49,7 @@
     "@types/node": "^11.13.8",
     "@types/qs": "^6.5.3",
     "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
+    "@types/react-dom": "18.0.8",
     "@types/react-router": "5.0.1",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^2.2.0",
