--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "axios": "0.21.1",
     "be-full": "^0.1.4",
     "copy-to-clipboard": "^3.2.0",
+    "lodash": "^4.17.21",
     "mobx": "4.15.7",
     "mobx-react": "6.3.1",
     "mobx-state-tree": "3.17.3",
